# x-scriber

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  interface.md  pyproject.toml  requirements.txt  user_todo.md
config/: settings.py  urls.py
data/output/: 0_trd.md
data/output_cache/: 5872053c_trd_20250916_084851.md  5872053c_trd_20250916_084900.md  5872053c_trd_20250916_085018.md  5872053c_trd_20250916_085034.md  5872053c_trd_20250916_085044.md  5872053c_trd_broken_20250916_014838.md  ae99b41a_trd_20250923_024214.md  f3a2df7f_trd_20250916_090538.md  f3a2df7f_trd_20250916_090638.md  f3a2df7f_trd_20250916_090737.md  f3a2df7f_trd_20250916_090838.md  f3a2df7f_trd_20250916_090936.md  f3a2df7f_trd_20250916_091031.md  f3a2df7f_trd_20250916_091713.md  f3a2df7f_trd_20250916_091820.md  f3a2df7f_trd_20250916_091915.md  f3a2df7f_trd_20250916_092315.md  f3a2df7f_trd_20250916_092413.md  f3a2df7f_trd_20250916_092612.md  f3a2df7f_trd_20250916_093509.md  f3a2df7f_trd_20250916_093938.md  f3a2df7f_trd_20250916_094345.md
data/project_metadata/: 0_metadata.json
data/raw-transcriptions/: 0_transcription_1.json  0_transcription_2.json
docs/: FFMPEG_STATUS.md  TODO.md  frontend_fixes.md  prd.md
tests/: regenerate_f3a2df7f_trd.py  simulate_trd_updates.py  test_openai.py  test_single_trd.py  test_workflow.py
xscriber/: apps.py  urls.py  views.py
xscriber/modules/: chat_completion.py  project_handler.py  recording_handler.py  transcriber.py
xscriber/tests/: test_basic.py  test_chat_completion.py  test_project_handler.py  test_recording_handler.py  test_transcriber.py
(+1 files in other folders)
