[tool.poetry]
name = "x-scriber"
version = "0.1.0"
description = "Live microphone recording with OpenAI Whisper transcription and TRD generation"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
pyaudio = "^0.2.11"
wave = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-django = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"